--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "scattersyntax",
-  "displayName": "ScatterSyntax",
+  "name": "ScatterHighlight",
+  "displayName": "ScatterHighlight",
   "description": "This extension provides syntax highlighting for ARM's scatter files",
   "version": "0.0.1",
   "engines": {
@@ -21,5 +21,6 @@
       "scopeName": "source.scatter",
       "path": "./syntaxes/scatter.tmLanguage.json"
     }]
-  }
+  },
+  "publisher": "nakazawa3desu"
 }
