--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ScatterHighlight",
   "displayName": "ScatterHighlight",
-  "description": "This extension provides syntax highlighting for ARM's scatter files",
-  "version": "0.0.1",
+  "description": "This extension provides syntax highlighting for scatter files used with ARM compilier",
+  "version": "0.0.2",
   "engines": {
     "vscode": "^1.86.0"
   },
@@ -22,5 +22,6 @@
       "path": "./syntaxes/scatter.tmLanguage.json"
     }]
   },
+  "repository": "https://github.com/MN522/scatter-highlight-vscode.git",
   "publisher": "nakazawa3desu"
 }
